package NYT.NExecAgent.NProto;

import "yt/ytlib/scheduler/job.proto";
import "yt/ytlib/misc/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqGetJobSpec
{ 
    required NYT.NProto.TGuid job_id = 1;
}

message TRspGetJobSpec
{
    required NScheduler.NProto.TJobSpec job_spec = 1;
}

///////////////////////////////////////////////////////////////////////////////

message TReqOnJobFinished
{
    required NYT.NProto.TGuid job_id = 1;
    required NScheduler.NProto.TJobResult result = 2;
}

message TRspOnJobFinished
{ }

////////////////////////////////////////////////////////////////////////////////

// One-way.
message TReqOnJobProgress
{
    required NYT.NProto.TGuid job_id = 1;
    required NScheduler.NProto.TJobProgress progress = 2;
}

////////////////////////////////////////////////////////////////////////////////

// One-way.
message TReqUpdateResourceUtilization
{
    required NYT.NProto.TGuid job_id = 1;
    required NScheduler.NProto.TNodeResources utilization = 2;
}

////////////////////////////////////////////////////////////////////////////////
